package org.springframework.cloud.pattern.sub;

/**
 * @author zhy
 * @date 2022/3/4 17:26
 */
public class SubSystemA {
    public void methodA() {
        System.out.println("SubSystemA's methodA executed.");
    }
}
