package org.springframework.cloud.pattern.sub;

/**
 * @author zhy
 * @date 2022/3/4 17:26
 */
public class SubSystemB {
    public void methodB() {
        System.out.println("SubSystemB's methodB executed.");
    }
}
